# sports_betting

./: .gitignore  README.md
code/: 1_API_NBA.ipynb  1_API_basketball_reference.ipynb  1_basketball_reference_API.ipynb  2_API_NBA.ipynb  2_EDA_Raw_Data.ipynb  2_NBA_API.ipynb  2_nba_EDA_Raw_Data.ipynb  3_EDA.ipynb  3_EDA_Raw_Data.ipynb  3_Feature_Engineering.ipynb  3_nba_EDA_Raw_Data.ipynb  3_nba_Feature_Engineering.ipynb  4_EDA_Basic_Features.ipynb  4_Feature_Engineering.ipynb  4_nba_EDA_Basic_Features.ipynb  4_nba_Feature_Engineering.ipynb  5_Baseline_GLMs_Basic_Features.ipynb  5_EDA_Processed_Data.ipynb  5_nba_Baseline_Models.ipynb  5_nba_Baseline_Models_Basic_Features.ipynb  5_nba_EDA_Processed_Data.ipynb  6_Baseline_Models.ipynb  6_nba_Baseline_Models.ipynb  6_nba_Tree_Based_Models.ipynb  6_nba_Tree_Models_Basic_Features.ipynb  6a_Val_RF_Basic_Features.ipynb  6b_Test_RF_Basic_Features.ipynb  7a_Val_SVM_Basic_Features.ipynb  7b_Test_SVM_Basic_Features.ipynb  8a_Val_XGB_Basic_Features.ipynb  Untitled.ipynb  test.ipynb  (+4 more)
james/collector/: pyproject.toml
james/collector/src/collector/: team_stats.py
james/feature_engineering/: pyproject.toml
james/spam_ingest/: pyproject.toml
james/spam_ingest/spam_ingest/api/: game_stats.py  team_stats.py
james/spam_ingest/spam_ingest/feature_engineering/: utility_functions.py
james/spam_ml/: README.md  pyproject.toml  test.txt
james/spam_ml/notebooks/: Untitled.ipynb  linear_test.ipynb  model_test.ipynb
james/spam_ml/notebooks/models/hopeful_mclaren/: model.joblib
james/spam_ml/notebooks/models/sad_bartik/: model.joblib
james/spam_ml/spam_ml/: __init__.py  james_utilities.py  linear_models.py  serialization.py
james/spam_ml/spam_ml/models/: base_model.py  james_simple_linear.py  simple_linear_with_ratios.py  simple_linear_with_ratios_and_advanced.py
james/spam_ml/spam_ml/models/classifiers/: first_classifier_test.py  last_matchup_classifier.py
james/spam_ml/spam_ml/models/regressors/: james_simple_linear.py  last_matchup_included.py  mlp_ratios_advanced.py
james/spam_ml/spam_ml/train/: class_first.py  first.py
(+359 files in other folders)
