[project]
name = "feature_engineering"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "James Milliman", email = "jaimsmilliman@gmail.com"},
]
dependencies = []
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
