[project]
name = "spam_ingest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "James Milliman", email = "jaimsmilliman@gmail.com"},
]
dependencies = [
    "nba-api>=1.4.1",
    "pandas>=2.2.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
eda = [
    "notebook>=7.1.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
]
