[project]
name = "spam_ml"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "James Milliman", email = "jaimsmilliman@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.4.1.post1",
    "pandas>=2.2.1",
    "spam-data @ file:///${PROJECT_ROOT}/../spam_data",
    "joblib>=1.3.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
eda = [
    "jupyter>=1.0.0",
    "notebook>=7.1.1",
]
dev = [
    "black>=24.2.0",
]
